Fix Hero Section Mobile Responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -149,12 +149,12 @@ h6 {
 .hero h1 {
   text-align: left;
   font-family: "Inter", sans-serif;
-  font-size: 64px;
+  font-size: 74px;
   color: #fffaf6;
   font-weight: 900;
   letter-spacing: -1.07px;
   text-transform: uppercase;
-  line-height: 60px;
+  line-height: 65px;
 }
 @media (max-width: 430px) {
   .hero h1 {
@@ -209,11 +209,8 @@ h6 {
   background-color: #e6a700;
 }
 .hero .hero-img {
-  width: 160%;
-  max-width: 709px;
-  position: absolute;
-  top: -343px;
-  left: -255px;
+  width: -webkit-fill-available;
+  height: auto;
   z-index: 1;
   transition: all 0.3s ease;
 }
@@ -286,6 +283,22 @@ h6 {
   }
 }
 
+.padded-row {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+@media screen and (min-width: 640px) {
+  .padded-row {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .padded-row {
+    padding: 60px 102px 20px 102px;
+  }
+}
+
 .site-footer {
   background-color: #29d837;
   color: white;
@@ -294,7 +307,7 @@ h6 {
 }
 
 .grid-container-wide {
-  width: 152rem;
+  width: 219rem;
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
