--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -22,12 +22,12 @@ h6 {
   h1 {
     text-align: left;
     font-family: $font-inter;
-    font-size: 64px;
+    font-size: 74px;
     color: $text-color-light;
     font-weight: 900;
     letter-spacing: -1.07px;
     text-transform: uppercase;
-    line-height: 60px;
+    line-height: 65px;
 
     @media (max-width: 430px) {
       font-size: 38px;
@@ -84,11 +84,9 @@ h6 {
 
   // ✅ Hero image overlap styling
   .hero-img {
-    width: 160%;
-    max-width: 709px;
-    position: absolute;
-    top: -343px;
-    left: -255px;
+    width: -webkit-fill-available;
+    height: auto;
+
     z-index: 1;
     transition: all 0.3s ease;
 
@@ -159,5 +157,20 @@ h6 {
 
   @media (max-width: 768px) {
     margin-top: 2rem;
+  }
+}
+
+.padded-row {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  // Optional: responsive padding
+  @media screen and (min-width: 640px) {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    padding: 60px 102px 20px 102px;
   }
 }
