--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,5 +1,5 @@
 .grid-container-wide {
-  width: 152rem;
+  width: 219rem;
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
